[add] グループの視聴状況取得APIの実装
