# openapi/main.yml
@@ -15,8 +15,8 @@ paths:
     $ref: './user-logout.yml'
   /movie/status:
     $ref: './movie-status.yml'
-  /groups/{group_id}/movie-statuses:
-    $ref: './group-movie-statuses.yml'
+  /groups/{group_id}/watched-movies:
+    $ref: './group-watched-movies.yml'
 
 components:
   securitySchemes:
@@ -142,7 +142,7 @@ components:
           items:
             $ref: "#/components/schemas/GetMovieStatus"
 
-    GetGroupMovieStatusesResponse:
+    GetGroupWatchedMoviesResponse:
       type: object
       required:
         - group_id
@@ -153,9 +153,9 @@ components:
         movies:
           type: array
           items:
-            $ref: "#/components/schemas/GetGroupMovieStatusesMovie"
+            $ref: "#/components/schemas/GetGroupWatchedMoviesMovie"
 
-    GetGroupMovieStatusesMovie:
+    GetGroupWatchedMoviesMovie:
       type: object
       required:
         - movie_id
@@ -192,6 +192,14 @@ components:
       properties:
         message:
           type: string
+
+    ForbiddenError:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string  
 
     UnauthorizedError:
       type: object
